--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.2",
     "com.unity.modules.ai": "1.0.0",
